--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "documentdb": "^1.12.0",
-    "restify": "^4.3.0"
+    "restify": "^4.3.0",
+    "uuid": "^3.1.0"
   }
 }
